OCP: Add CPE for HyperShift Hosted cluster
Added ocp4-on-hypershift-hosted CPE for HyperShift Hosted Cluster, exclude rules that will not be checked on HyperShift Hosted Cluster

--- a/applications/openshift/api-server/api_server_admission_control_plugin_alwaysadmit/rule.yml
+++ b/applications/openshift/api-server/api_server_admission_control_plugin_alwaysadmit/rule.yml
@@ -34,6 +34,8 @@ references:
     pcidss: Req-2.2
     srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>AlwaysAdmit</tt> admission control plugin is not set'
 
 ocil: |-
