--- a/applications/openshift/api-server/api_server_audit_log_maxbackup/rule.yml
+++ b/applications/openshift/api-server/api_server_audit_log_maxbackup/rule.yml
@@ -44,6 +44,8 @@ references:
     pcidss: Req-2.2
     srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>audit-log-maxbackup</tt> is set to <tt>10</tt> or as appropriate'
 
 ocil: |-
