--- a/applications/openshift/api-server/api_server_client_ca/rule.yml
+++ b/applications/openshift/api-server/api_server_client_ca/rule.yml
@@ -48,6 +48,8 @@ references:
 identifiers:
     cce@ocp4: CCE-84284-9
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>client-ca-file</tt> is not set as appropriate for <tt>apiServerArguments</tt>'
 
 ocil: |-
