--- a/applications/openshift/api-server/api_server_encryption_provider_cipher/rule.yml
+++ b/applications/openshift/api-server/api_server_encryption_provider_cipher/rule.yml
@@ -64,6 +64,8 @@ references:
     pcidss: Req-2.2
     srg: SRG-APP-000429-CTR-001060
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>aescbc</tt> is not configured as the encryption provider'
 
 ocil: |-
