--- a/applications/openshift/api-server/api_server_insecure_port/rule.yml
+++ b/applications/openshift/api-server/api_server_insecure_port/rule.yml
@@ -39,7 +39,7 @@ identifiers:
   cce@ocp4: CCE-83813-6
 
 platforms:
-  - ocp4.6 or ocp4.7 or ocp4.8 or ocp4.9 or ocp4.10
+  - (ocp4.6 or ocp4.7 or ocp4.8 or ocp4.9 or ocp4.10) and not ocp4-on-hypershift-hosted
 
 severity: medium
 
