--- a/applications/openshift/api-server/api_server_kubelet_client_cert_pre_4_9/rule.yml
+++ b/applications/openshift/api-server/api_server_kubelet_client_cert_pre_4_9/rule.yml
@@ -31,7 +31,7 @@ identifiers:
   cce@ocp4: CCE-85890-2
 
 platforms:
-    - ocp4.6 or ocp4.7 or ocp4.8
+    - (ocp4.6 or ocp4.7 or ocp4.8) and not ocp4-on-hypershift-hosted
 
 severity: high
 
