--- a/applications/openshift/api-server/api_server_tls_private_key/rule.yml
+++ b/applications/openshift/api-server/api_server_tls_private_key/rule.yml
@@ -46,6 +46,8 @@ references:
     pcidss: Req-2.2,Req-2.2.3,Req-2.3
     srg: SRG-APP-000441-CTR-001090,SRG-APP-000442-CTR-001095
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>tls-private-key-file</tt> is not set as appropriate for <tt>apiServerArguments</tt>'
 
 ocil: |-
