--- a/applications/openshift/api-server/audit_log_forwarding_enabled/rule.yml
+++ b/applications/openshift/api-server/audit_log_forwarding_enabled/rule.yml
@@ -27,7 +27,8 @@ references:
   pcidss: Req-2.2,Req-10.5.3,Req-10.5.4
   srg: SRG-APP-000092-CTR-000165,SRG-APP-000111-CTR-000220,SRG-APP-000358-CTR-000805
 
-platform: not ocp4-on-hypershift
+platform: not ocp4-on-hypershift and not ocp4-on-hypershift-hosted
+
 
 ocil_clause: 'Logs are not forwarded outside the cluster'
 
