--- a/applications/openshift/controller/controller_rotate_kubelet_server_certs/rule.yml
+++ b/applications/openshift/controller/controller_rotate_kubelet_server_certs/rule.yml
@@ -38,6 +38,8 @@ rationale: |-
 
 severity: medium
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: |-
     <tt>RotateKubeletServerCertificate</tt> argument is set to <tt>false</tt> in the
     <tt>controllerArguments</tt> options
