--- a/applications/openshift/controller/controller_secure_port/rule.yml
+++ b/applications/openshift/controller/controller_secure_port/rule.yml
@@ -37,6 +37,8 @@ severity: low
 identifiers:
     cce@ocp4: CCE-83861-5
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: |-
     <tt>secure-port</tt> is not configured to use a secure port
 
