--- a/applications/openshift/etcd/etcd_check_cipher_suite/rule.yml
+++ b/applications/openshift/etcd/etcd_check_cipher_suite/rule.yml
@@ -18,6 +18,8 @@ identifiers:
 references:
   pcidss: Req-4.1
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: 'ETCD cipher suite does not meet requirements'
 
 ocil: |-
