--- a/applications/openshift/etcd/etcd_peer_key_file/rule.yml
+++ b/applications/openshift/etcd/etcd_peer_key_file/rule.yml
@@ -38,6 +38,8 @@ references:
     pcidss: Req-2.2,Req-2.2.3,Req-2.3
     srg: SRG-APP-000441-CTR-001090,SRG-APP-000442-CTR-001095
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: 'the etcd peer client key file is not configured'
 
 ocil: |-
