--- a/applications/openshift/general/tls_version_check_apiserver/rule.yml
+++ b/applications/openshift/general/tls_version_check_apiserver/rule.yml
@@ -26,6 +26,8 @@ identifiers:
 references:
   pcidss: Req-4.1
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: 'Ensure TLS version is equal to 1.2 or greater for the openshift api server'
 
 ocil: |-
