--- a/applications/openshift/scheduler/scheduler_no_bind_address/rule.yml
+++ b/applications/openshift/scheduler/scheduler_no_bind_address/rule.yml
@@ -41,6 +41,8 @@ platforms:
 
 severity: medium
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>kube-scheduler-pod</tt> sets --bind-address'
 
 ocil: |-
