--- a/applications/openshift/api-server/api_server_basic_auth/rule.yml
+++ b/applications/openshift/api-server/api_server_basic_auth/rule.yml
@@ -48,6 +48,8 @@ references:
     pcidss: Req-2.2
     srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: 'basic-auth-file is configured and enabled for the API server'
 
 ocil: |-
