--- a/applications/openshift/api-server/api_server_etcd_cert/rule.yml
+++ b/applications/openshift/api-server/api_server_etcd_cert/rule.yml
@@ -46,6 +46,8 @@ references:
     pcidss: Req-2.2,Req-2.2.3,Req-2.3
     srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>etcd-certfile</tt> does not exist or is not configured to valid certificates'
 
 ocil: |-
