--- a/applications/openshift/api-server/api_server_https_for_kubelet_conn/rule.yml
+++ b/applications/openshift/api-server/api_server_https_for_kubelet_conn/rule.yml
@@ -32,6 +32,8 @@ references:
     pcidss: Req-2.2,Req-2.3
     srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>kubelet-https</tt> is set to false'
 
 ocil: |-
