--- a/applications/openshift/api-server/api_server_insecure_bind_address/rule.yml
+++ b/applications/openshift/api-server/api_server_insecure_bind_address/rule.yml
@@ -34,7 +34,6 @@ rationale: |-
 identifiers:
   cce@ocp4: CCE-83955-5
 
-
 severity: medium
 
 references:
@@ -43,6 +42,8 @@ references:
     nist: CM-6,CM-6(1)
     pcidss: Req-2.2
     srg: SRG-APP-000516-CTR-001325
+
+platform: not ocp4-on-hypershift-hosted
 
 ocil_clause: 'insecure-bind-address is exists and has not been removed</tt>'
 
