--- a/applications/openshift/api-server/api_server_kubelet_client_key/rule.yml
+++ b/applications/openshift/api-server/api_server_kubelet_client_key/rule.yml
@@ -35,7 +35,7 @@ identifiers:
   cce@ocp4: CCE-83591-8
 
 platforms:
-  - ocp4.9 or ocp4.10 or ocp4.11 or ocp4.12 or ocp4.13
+  - (ocp4.9 or ocp4.10 or ocp4.11 or ocp4.12 or ocp4.13) and not ocp4-on-hypershift-hosted
 
 severity: high
 
