--- a/applications/openshift/api-server/api_server_no_adm_ctrl_plugins_disabled/rule.yml
+++ b/applications/openshift/api-server/api_server_no_adm_ctrl_plugins_disabled/rule.yml
@@ -37,6 +37,8 @@ references:
     pcidss: Req-2.2
     srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: 'No admission plugins are disabled'
 
 ocil: |-
