--- a/applications/openshift/api-server/api_server_service_account_lookup/rule.yml
+++ b/applications/openshift/api-server/api_server_service_account_lookup/rule.yml
@@ -35,6 +35,8 @@ references:
   pcidss: Req-2.2
   srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: 'API server argument <tt>--service-account-lookup</tt> contains <tt>true</tt>'
 
 ocil: |-
