--- a/applications/openshift/controller/controller_insecure_port_disabled/rule.yml
+++ b/applications/openshift/controller/controller_insecure_port_disabled/rule.yml
@@ -43,6 +43,8 @@ severity: low
 identifiers:
     cce@ocp4: CCE-83578-5
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: |-
     <tt>port</tt> is not disabled
 
