--- a/applications/openshift/general/oauth_login_template_set/rule.yml
+++ b/applications/openshift/general/oauth_login_template_set/rule.yml
@@ -33,6 +33,8 @@ references:
   nist: AC-8
   srg: SRG-APP-000068-CTR-000120
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: 'login template is not set'
 
 ocil: |-
