--- a/applications/openshift/kubelet/kubelet_configure_tls_key/rule.yml
+++ b/applications/openshift/kubelet/kubelet_configure_tls_key/rule.yml
@@ -28,7 +28,7 @@ identifiers:
     cce@ocp4: CCE-90614-9
 
 platforms:
-  - ocp4.9 or ocp4.10 or ocp4.11 or ocp4.12 or ocp4.13
+  - (ocp4.9 or ocp4.10 or ocp4.11 or ocp4.12 or ocp4.13) and not ocp4-on-hypershift-hosted
 
 references:
     cis@ocp4: 4.2.10
