--- a/applications/openshift/openshift-api-server/openshift_api_server_audit_log_path/rule.yml
+++ b/applications/openshift/openshift-api-server/openshift_api_server_audit_log_path/rule.yml
@@ -43,6 +43,8 @@ references:
     pcidss: Req-2.2
     srg: SRG-APP-000516-CTR-001325
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>audit-log-path</tt> does not contain a valid audit file path'
 
 ocil: |-
