--- a/applications/openshift/scheduler/scheduler_port_is_zero/rule.yml
+++ b/applications/openshift/scheduler/scheduler_port_is_zero/rule.yml
@@ -31,6 +31,8 @@ references:
 
 severity: medium
 
+platform: not ocp4-on-hypershift-hosted
+
 ocil_clause: '<tt>kube-scheduler-pod</tt> port parameter is zero'
 
 ocil: |-
